1.4.0/clojure.core/index.md
---
layout: ns
---
# [Clojure 1.4.0](../)/clojure.core

{% markdown 1.4.0/clojure.core/index.md %}

<a id="tall">Toggle all</a>

## Special Forms <a id="sff">+</a>

<div id="sforms" markdown="1">

### .
[.](./DOT/)

### D
[def](./def/)
[do](./do/)

### I
[if](./if/)

### M
[monitor-enter](./monitor_DASH_enter/)
[monitor-exit](./monitor_DASH_exit/)

### N
[new](./new/)

### Q
[quote](./quote/)

### R
[recur](./recur/)

### S
[set!](./set_BANG/)

### T
[throw](./throw/)
[try](./try/)

### V
[var](./var/)

</div>


## Macros <a id="mf">+</a>

<div id="macros" markdown="1">

### -
[->](./DASH__GT/)
[->>](./DASH__GT__GT/)

### .
[..](./DOT__DOT/)

### A
[amap](./amap/)
[and](./and/)
[areduce](./areduce/)
[assert](./assert/)

### B
[binding](./binding/)
[bound-fn](./bound_DASH_fn/)

### C
[case](./case/)
[comment](./comment/)
[cond](./cond/)
[condp](./condp/)

### D
[declare](./declare/)
[definline](./definline/)
[definterface](./definterface/)
[defmacro](./defmacro/)
[defmethod](./defmethod/)
[defmulti](./defmulti/)
[defn](./defn/)
[defn-](./defn_DASH/)
[defonce](./defonce/)
[defprotocol](./defprotocol/)
[defrecord](./defrecord/)
[defstruct](./defstruct/)
[deftype](./deftype/)
[delay](./delay/)
[doseq](./doseq/)
[dosync](./dosync/)
[dotimes](./dotimes/)
[doto](./doto/)

### E
[extend-protocol](./extend_DASH_protocol/)
[extend-type](./extend_DASH_type/)

### F
[fn](./fn/)
[for](./for/)
[future](./future/)

### G
[gen-class](./gen_DASH_class/)
[gen-interface](./gen_DASH_interface/)

### I
[if-let](./if_DASH_let/)
[if-not](./if_DASH_not/)
[import](./import/)
[io!](./io_BANG/)

### L
[lazy-cat](./lazy_DASH_cat/)
[lazy-seq](./lazy_DASH_seq/)
[let](./let/)
[letfn](./letfn/)
[locking](./locking/)
[loop](./loop/)

### M
[memfn](./memfn/)

### N
[ns](./ns/)

### O
[or](./or/)

### P
[proxy](./proxy/)
[proxy-super](./proxy_DASH_super/)
[pvalues](./pvalues/)

### R
[refer-clojure](./refer_DASH_clojure/)
[reify](./reify/)

### S
[sync](./sync/)

### T
[time](./time/)

### W
[when](./when/)
[when-first](./when_DASH_first/)
[when-let](./when_DASH_let/)
[when-not](./when_DASH_not/)
[while](./while/)
[with-bindings](./with_DASH_bindings/)
[with-in-str](./with_DASH_in_DASH_str/)
[with-loading-context](./with_DASH_loading_DASH_context/)
[with-local-vars](./with_DASH_local_DASH_vars/)
[with-open](./with_DASH_open/)
[with-out-str](./with_DASH_out_DASH_str/)
[with-precision](./with_DASH_precision/)
[with-redefs](./with_DASH_redefs/)

</div>


## Vars <a id="vf">+</a>

<div id="vars" markdown="1">

### *
[\*1](./STAR_1/)
[\*2](./STAR_2/)
[\*3](./STAR_3/)
[\*agent\*](./STAR_agent_STAR/)
[\*allow-unresolved-vars\*](./STAR_allow_DASH_unresolved_DASH_vars_STAR/)
[\*assert\*](./STAR_assert_STAR/)
[\*clojure-version\*](./STAR_clojure_DASH_version_STAR/)
[\*command-line-args\*](./STAR_command_DASH_line_DASH_args_STAR/)
[\*compile-files\*](./STAR_compile_DASH_files_STAR/)
[\*compile-path\*](./STAR_compile_DASH_path_STAR/)
[\*compiler-options\*](./STAR_compiler_DASH_options_STAR/)
[\*data-readers\*](./STAR_data_DASH_readers_STAR/)
[\*e](./STAR_e/)
[\*err\*](./STAR_err_STAR/)
[\*file\*](./STAR_file_STAR/)
[\*flush-on-newline\*](./STAR_flush_DASH_on_DASH_newline_STAR/)
[\*fn-loader\*](./STAR_fn_DASH_loader_STAR/)
[\*in\*](./STAR_in_STAR/)
[\*math-context\*](./STAR_math_DASH_context_STAR/)
[\*ns\*](./STAR_ns_STAR/)
[\*out\*](./STAR_out_STAR/)
[\*print-dup\*](./STAR_print_DASH_dup_STAR/)
[\*print-length\*](./STAR_print_DASH_length_STAR/)
[\*print-level\*](./STAR_print_DASH_level_STAR/)
[\*print-meta\*](./STAR_print_DASH_meta_STAR/)
[\*print-readably\*](./STAR_print_DASH_readably_STAR/)
[\*read-eval\*](./STAR_read_DASH_eval_STAR/)
[\*source-path\*](./STAR_source_DASH_path_STAR/)
[\*unchecked-math\*](./STAR_unchecked_DASH_math_STAR/)
[\*use-context-classloader\*](./STAR_use_DASH_context_DASH_classloader_STAR/)
[\*verbose-defrecords\*](./STAR_verbose_DASH_defrecords_STAR/)
[\*warn-on-reflection\*](./STAR_warn_DASH_on_DASH_reflection_STAR/)

### E
[EMPTY-NODE](./EMPTY_DASH_NODE/)

### C
[char-escape-string](./char_DASH_escape_DASH_string/)
[char-name-string](./char_DASH_name_DASH_string/)

### D
[default-data-readers](./default_DASH_data_DASH_readers/)

### I
[in-ns](./in_DASH_ns/)

### L
[load-file](./load_DASH_file/)

### P
[primitives-classnames](./primitives_DASH_classnames/)
[print-dup](./print_DASH_dup/)
[print-method](./print_DASH_method/)

### U
[unquote](./unquote/)
[unquote-splicing](./unquote_DASH_splicing/)

</div>


## Functions <a id="ff">+</a>

<div id="fns" markdown="1">

### *
[\*](./STAR/)
[\*'](./STAR__SQUOTE/)

### +
[+](./PLUS/)
[+'](./PLUS__SQUOTE/)

### -
[-](./DASH/)
[-'](./DASH__SQUOTE/)
[->ArrayChunk](./DASH__GT_ArrayChunk/)
[->Vec](./DASH__GT_Vec/)
[->VecNode](./DASH__GT_VecNode/)
[->VecSeq](./DASH__GT_VecSeq/)
[-cache-protocol-fn](./DASH_cache_DASH_protocol_DASH_fn/)
[-reset-methods](./DASH_reset_DASH_methods/)

### /
[/](./SLASH/)

### <
[<](./LT/)
[<=](./LT__EQ/)

### =
[=](./EQ/)
[==](./EQ__EQ/)

### >
[>](./GT/)
[>=](./GT__EQ/)

### A
[accessor](./accessor/)
[aclone](./aclone/)
[add-classpath](./add_DASH_classpath/)
[add-watch](./add_DASH_watch/)
[agent](./agent/)
[agent-error](./agent_DASH_error/)
[agent-errors](./agent_DASH_errors/)
[aget](./aget/)
[alength](./alength/)
[alias](./alias/)
[all-ns](./all_DASH_ns/)
[alter](./alter/)
[alter-meta!](./alter_DASH_meta_BANG/)
[alter-var-root](./alter_DASH_var_DASH_root/)
[ancestors](./ancestors/)
[apply](./apply/)
[array-map](./array_DASH_map/)
[aset](./aset/)
[aset-boolean](./aset_DASH_boolean/)
[aset-byte](./aset_DASH_byte/)
[aset-char](./aset_DASH_char/)
[aset-double](./aset_DASH_double/)
[aset-float](./aset_DASH_float/)
[aset-int](./aset_DASH_int/)
[aset-long](./aset_DASH_long/)
[aset-short](./aset_DASH_short/)
[assoc](./assoc/)
[assoc!](./assoc_BANG/)
[assoc-in](./assoc_DASH_in/)
[associative?](./associative_QMARK/)
[atom](./atom/)
[await](./await/)
[await-for](./await_DASH_for/)
[await1](./await1/)

### B
[bases](./bases/)
[bean](./bean/)
[bigdec](./bigdec/)
[bigint](./bigint/)
[biginteger](./biginteger/)
[bit-and](./bit_DASH_and/)
[bit-and-not](./bit_DASH_and_DASH_not/)
[bit-clear](./bit_DASH_clear/)
[bit-flip](./bit_DASH_flip/)
[bit-not](./bit_DASH_not/)
[bit-or](./bit_DASH_or/)
[bit-set](./bit_DASH_set/)
[bit-shift-left](./bit_DASH_shift_DASH_left/)
[bit-shift-right](./bit_DASH_shift_DASH_right/)
[bit-test](./bit_DASH_test/)
[bit-xor](./bit_DASH_xor/)
[boolean](./boolean/)
[boolean-array](./boolean_DASH_array/)
[booleans](./booleans/)
[bound-fn\*](./bound_DASH_fn_STAR/)
[bound?](./bound_QMARK/)
[butlast](./butlast/)
[byte](./byte/)
[byte-array](./byte_DASH_array/)
[bytes](./bytes/)

### C
[cast](./cast/)
[char](./char/)
[char-array](./char_DASH_array/)
[char?](./char_QMARK/)
[chars](./chars/)
[chunk](./chunk/)
[chunk-append](./chunk_DASH_append/)
[chunk-buffer](./chunk_DASH_buffer/)
[chunk-cons](./chunk_DASH_cons/)
[chunk-first](./chunk_DASH_first/)
[chunk-next](./chunk_DASH_next/)
[chunk-rest](./chunk_DASH_rest/)
[chunked-seq?](./chunked_DASH_seq_QMARK/)
[class](./class/)
[class?](./class_QMARK/)
[clear-agent-errors](./clear_DASH_agent_DASH_errors/)
[clojure-version](./clojure_DASH_version/)
[coll?](./coll_QMARK/)
[commute](./commute/)
[comp](./comp/)
[comparator](./comparator/)
[compare](./compare/)
[compare-and-set!](./compare_DASH_and_DASH_set_BANG/)
[compile](./compile/)
[complement](./complement/)
[concat](./concat/)
[conj](./conj/)
[conj!](./conj_BANG/)
[cons](./cons/)
[constantly](./constantly/)
[construct-proxy](./construct_DASH_proxy/)
[contains?](./contains_QMARK/)
[count](./count/)
[counted?](./counted_QMARK/)
[create-ns](./create_DASH_ns/)
[create-struct](./create_DASH_struct/)
[cycle](./cycle/)

### D
[dec](./dec/)
[dec'](./dec_SQUOTE/)
[decimal?](./decimal_QMARK/)
[delay?](./delay_QMARK/)
[deliver](./deliver/)
[denominator](./denominator/)
[deref](./deref/)
[derive](./derive/)
[descendants](./descendants/)
[destructure](./destructure/)
[disj](./disj/)
[disj!](./disj_BANG/)
[dissoc](./dissoc/)
[dissoc!](./dissoc_BANG/)
[distinct](./distinct/)
[distinct?](./distinct_QMARK/)
[doall](./doall/)
[dorun](./dorun/)
[double](./double/)
[double-array](./double_DASH_array/)
[doubles](./doubles/)
[drop](./drop/)
[drop-last](./drop_DASH_last/)
[drop-while](./drop_DASH_while/)

### E
[empty](./empty/)
[empty?](./empty_QMARK/)
[ensure](./ensure/)
[enumeration-seq](./enumeration_DASH_seq/)
[error-handler](./error_DASH_handler/)
[error-mode](./error_DASH_mode/)
[eval](./eval/)
[even?](./even_QMARK/)
[every-pred](./every_DASH_pred/)
[every?](./every_QMARK/)
[ex-data](./ex_DASH_data/)
[ex-info](./ex_DASH_info/)
[extend](./extend/)
[extenders](./extenders/)
[extends?](./extends_QMARK/)

### F
[false?](./false_QMARK/)
[ffirst](./ffirst/)
[file-seq](./file_DASH_seq/)
[filter](./filter/)
[filterv](./filterv/)
[find](./find/)
[find-keyword](./find_DASH_keyword/)
[find-ns](./find_DASH_ns/)
[find-protocol-impl](./find_DASH_protocol_DASH_impl/)
[find-protocol-method](./find_DASH_protocol_DASH_method/)
[find-var](./find_DASH_var/)
[first](./first/)
[flatten](./flatten/)
[float](./float/)
[float-array](./float_DASH_array/)
[float?](./float_QMARK/)
[floats](./floats/)
[flush](./flush/)
[fn?](./fn_QMARK/)
[fnext](./fnext/)
[fnil](./fnil/)
[force](./force/)
[format](./format/)
[frequencies](./frequencies/)
[future-call](./future_DASH_call/)
[future-cancel](./future_DASH_cancel/)
[future-cancelled?](./future_DASH_cancelled_QMARK/)
[future-done?](./future_DASH_done_QMARK/)
[future?](./future_QMARK/)

### G
[gensym](./gensym/)
[get](./get/)
[get-in](./get_DASH_in/)
[get-method](./get_DASH_method/)
[get-proxy-class](./get_DASH_proxy_DASH_class/)
[get-thread-bindings](./get_DASH_thread_DASH_bindings/)
[get-validator](./get_DASH_validator/)
[group-by](./group_DASH_by/)

### H
[hash](./hash/)
[hash-combine](./hash_DASH_combine/)
[hash-map](./hash_DASH_map/)
[hash-set](./hash_DASH_set/)

### I
[identical?](./identical_QMARK/)
[identity](./identity/)
[ifn?](./ifn_QMARK/)
[inc](./inc/)
[inc'](./inc_SQUOTE/)
[init-proxy](./init_DASH_proxy/)
[instance?](./instance_QMARK/)
[int](./int/)
[int-array](./int_DASH_array/)
[integer?](./integer_QMARK/)
[interleave](./interleave/)
[intern](./intern/)
[interpose](./interpose/)
[into](./into/)
[into-array](./into_DASH_array/)
[ints](./ints/)
[isa?](./isa_QMARK/)
[iterate](./iterate/)
[iterator-seq](./iterator_DASH_seq/)

### J
[juxt](./juxt/)

### K
[keep](./keep/)
[keep-indexed](./keep_DASH_indexed/)
[key](./key/)
[keys](./keys/)
[keyword](./keyword/)
[keyword?](./keyword_QMARK/)

### L
[last](./last/)
[line-seq](./line_DASH_seq/)
[list](./list/)
[list\*](./list_STAR/)
[list?](./list_QMARK/)
[load](./load/)
[load-reader](./load_DASH_reader/)
[load-string](./load_DASH_string/)
[loaded-libs](./loaded_DASH_libs/)
[long](./long/)
[long-array](./long_DASH_array/)
[longs](./longs/)

### M
[macroexpand](./macroexpand/)
[macroexpand-1](./macroexpand_DASH_1/)
[make-array](./make_DASH_array/)
[make-hierarchy](./make_DASH_hierarchy/)
[map](./map/)
[map-indexed](./map_DASH_indexed/)
[map?](./map_QMARK/)
[mapcat](./mapcat/)
[mapv](./mapv/)
[max](./max/)
[max-key](./max_DASH_key/)
[memoize](./memoize/)
[merge](./merge/)
[merge-with](./merge_DASH_with/)
[meta](./meta/)
[method-sig](./method_DASH_sig/)
[methods](./methods/)
[min](./min/)
[min-key](./min_DASH_key/)
[mod](./mod/)
[munge](./munge/)

### N
[name](./name/)
[namespace](./namespace/)
[namespace-munge](./namespace_DASH_munge/)
[neg?](./neg_QMARK/)
[newline](./newline/)
[next](./next/)
[nfirst](./nfirst/)
[nil?](./nil_QMARK/)
[nnext](./nnext/)
[not](./not/)
[not-any?](./not_DASH_any_QMARK/)
[not-empty](./not_DASH_empty/)
[not-every?](./not_DASH_every_QMARK/)
[not=](./not_EQ/)
[ns-aliases](./ns_DASH_aliases/)
[ns-imports](./ns_DASH_imports/)
[ns-interns](./ns_DASH_interns/)
[ns-map](./ns_DASH_map/)
[ns-name](./ns_DASH_name/)
[ns-publics](./ns_DASH_publics/)
[ns-refers](./ns_DASH_refers/)
[ns-resolve](./ns_DASH_resolve/)
[ns-unalias](./ns_DASH_unalias/)
[ns-unmap](./ns_DASH_unmap/)
[nth](./nth/)
[nthnext](./nthnext/)
[nthrest](./nthrest/)
[num](./num/)
[number?](./number_QMARK/)
[numerator](./numerator/)

### O
[object-array](./object_DASH_array/)
[odd?](./odd_QMARK/)

### P
[parents](./parents/)
[partial](./partial/)
[partition](./partition/)
[partition-all](./partition_DASH_all/)
[partition-by](./partition_DASH_by/)
[pcalls](./pcalls/)
[peek](./peek/)
[persistent!](./persistent_BANG/)
[pmap](./pmap/)
[pop](./pop/)
[pop!](./pop_BANG/)
[pop-thread-bindings](./pop_DASH_thread_DASH_bindings/)
[pos?](./pos_QMARK/)
[pr](./pr/)
[pr-str](./pr_DASH_str/)
[prefer-method](./prefer_DASH_method/)
[prefers](./prefers/)
[print](./print/)
[print-ctor](./print_DASH_ctor/)
[print-simple](./print_DASH_simple/)
[print-str](./print_DASH_str/)
[printf](./printf/)
[println](./println/)
[println-str](./println_DASH_str/)
[prn](./prn/)
[prn-str](./prn_DASH_str/)
[promise](./promise/)
[proxy-call-with-super](./proxy_DASH_call_DASH_with_DASH_super/)
[proxy-mappings](./proxy_DASH_mappings/)
[proxy-name](./proxy_DASH_name/)
[push-thread-bindings](./push_DASH_thread_DASH_bindings/)

### Q
[quot](./quot/)

### R
[rand](./rand/)
[rand-int](./rand_DASH_int/)
[rand-nth](./rand_DASH_nth/)
[range](./range/)
[ratio?](./ratio_QMARK/)
[rational?](./rational_QMARK/)
[rationalize](./rationalize/)
[re-find](./re_DASH_find/)
[re-groups](./re_DASH_groups/)
[re-matcher](./re_DASH_matcher/)
[re-matches](./re_DASH_matches/)
[re-pattern](./re_DASH_pattern/)
[re-seq](./re_DASH_seq/)
[read](./read/)
[read-line](./read_DASH_line/)
[read-string](./read_DASH_string/)
[realized?](./realized_QMARK/)
[reduce](./reduce/)
[reduce-kv](./reduce_DASH_kv/)
[reductions](./reductions/)
[ref](./ref/)
[ref-history-count](./ref_DASH_history_DASH_count/)
[ref-max-history](./ref_DASH_max_DASH_history/)
[ref-min-history](./ref_DASH_min_DASH_history/)
[ref-set](./ref_DASH_set/)
[refer](./refer/)
[release-pending-sends](./release_DASH_pending_DASH_sends/)
[rem](./rem/)
[remove](./remove/)
[remove-all-methods](./remove_DASH_all_DASH_methods/)
[remove-method](./remove_DASH_method/)
[remove-ns](./remove_DASH_ns/)
[remove-watch](./remove_DASH_watch/)
[repeat](./repeat/)
[repeatedly](./repeatedly/)
[replace](./replace/)
[replicate](./replicate/)
[require](./require/)
[reset!](./reset_BANG/)
[reset-meta!](./reset_DASH_meta_BANG/)
[resolve](./resolve/)
[rest](./rest/)
[restart-agent](./restart_DASH_agent/)
[resultset-seq](./resultset_DASH_seq/)
[reverse](./reverse/)
[reversible?](./reversible_QMARK/)
[rseq](./rseq/)
[rsubseq](./rsubseq/)

### S
[satisfies?](./satisfies_QMARK/)
[second](./second/)
[select-keys](./select_DASH_keys/)
[send](./send/)
[send-off](./send_DASH_off/)
[seq](./seq/)
[seq?](./seq_QMARK/)
[seque](./seque/)
[sequence](./sequence/)
[sequential?](./sequential_QMARK/)
[set](./set/)
[set-error-handler!](./set_DASH_error_DASH_handler_BANG/)
[set-error-mode!](./set_DASH_error_DASH_mode_BANG/)
[set-validator!](./set_DASH_validator_BANG/)
[set?](./set_QMARK/)
[short](./short/)
[short-array](./short_DASH_array/)
[shorts](./shorts/)
[shuffle](./shuffle/)
[shutdown-agents](./shutdown_DASH_agents/)
[slurp](./slurp/)
[some](./some/)
[some-fn](./some_DASH_fn/)
[sort](./sort/)
[sort-by](./sort_DASH_by/)
[sorted-map](./sorted_DASH_map/)
[sorted-map-by](./sorted_DASH_map_DASH_by/)
[sorted-set](./sorted_DASH_set/)
[sorted-set-by](./sorted_DASH_set_DASH_by/)
[sorted?](./sorted_QMARK/)
[special-symbol?](./special_DASH_symbol_QMARK/)
[spit](./spit/)
[split-at](./split_DASH_at/)
[split-with](./split_DASH_with/)
[str](./str/)
[string?](./string_QMARK/)
[struct](./struct/)
[struct-map](./struct_DASH_map/)
[subs](./subs/)
[subseq](./subseq/)
[subvec](./subvec/)
[supers](./supers/)
[swap!](./swap_BANG/)
[symbol](./symbol/)
[symbol?](./symbol_QMARK/)

### T
[take](./take/)
[take-last](./take_DASH_last/)
[take-nth](./take_DASH_nth/)
[take-while](./take_DASH_while/)
[test](./test/)
[the-ns](./the_DASH_ns/)
[thread-bound?](./thread_DASH_bound_QMARK/)
[to-array](./to_DASH_array/)
[to-array-2d](./to_DASH_array_DASH_2d/)
[trampoline](./trampoline/)
[transient](./transient/)
[tree-seq](./tree_DASH_seq/)
[true?](./true_QMARK/)
[type](./type/)

### U
[unchecked-add](./unchecked_DASH_add/)
[unchecked-add-int](./unchecked_DASH_add_DASH_int/)
[unchecked-byte](./unchecked_DASH_byte/)
[unchecked-char](./unchecked_DASH_char/)
[unchecked-dec](./unchecked_DASH_dec/)
[unchecked-dec-int](./unchecked_DASH_dec_DASH_int/)
[unchecked-divide-int](./unchecked_DASH_divide_DASH_int/)
[unchecked-double](./unchecked_DASH_double/)
[unchecked-float](./unchecked_DASH_float/)
[unchecked-inc](./unchecked_DASH_inc/)
[unchecked-inc-int](./unchecked_DASH_inc_DASH_int/)
[unchecked-int](./unchecked_DASH_int/)
[unchecked-long](./unchecked_DASH_long/)
[unchecked-multiply](./unchecked_DASH_multiply/)
[unchecked-multiply-int](./unchecked_DASH_multiply_DASH_int/)
[unchecked-negate](./unchecked_DASH_negate/)
[unchecked-negate-int](./unchecked_DASH_negate_DASH_int/)
[unchecked-remainder-int](./unchecked_DASH_remainder_DASH_int/)
[unchecked-short](./unchecked_DASH_short/)
[unchecked-subtract](./unchecked_DASH_subtract/)
[unchecked-subtract-int](./unchecked_DASH_subtract_DASH_int/)
[underive](./underive/)
[update-in](./update_DASH_in/)
[update-proxy](./update_DASH_proxy/)
[use](./use/)

### V
[val](./val/)
[vals](./vals/)
[var-get](./var_DASH_get/)
[var-set](./var_DASH_set/)
[var?](./var_QMARK/)
[vary-meta](./vary_DASH_meta/)
[vec](./vec/)
[vector](./vector/)
[vector-of](./vector_DASH_of/)
[vector?](./vector_QMARK/)

### W
[with-bindings\*](./with_DASH_bindings_STAR/)
[with-meta](./with_DASH_meta/)
[with-redefs-fn](./with_DASH_redefs_DASH_fn/)

### X
[xml-seq](./xml_DASH_seq/)

### Z
[zero?](./zero_QMARK/)
[zipmap](./zipmap/)

</div>
